Fixed skills on mobile

--- a/style.css
+++ b/style.css
@@ -685,6 +685,8 @@ img{
 
 .greyIconContainer{
     position: relative;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .greyIcon{
